Tighten eatme implementation plan